airflow_docker/logs/dag_id=sql_hook_to_s3/run_id=manual__2023-11-08T14:52:35.114580+00:00/task_id=load_data_from_pg_to_s3/attempt=1.log
[2023-11-08T14:52:36.016+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 manual__2023-11-08T14:52:35.114580+00:00 [queued]>
[2023-11-08T14:52:36.050+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 manual__2023-11-08T14:52:35.114580+00:00 [queued]>
[2023-11-08T14:52:36.051+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2023-11-08T14:52:36.090+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): load_data_from_pg_to_s3> on 2023-11-08 14:52:35.114580+00:00
[2023-11-08T14:52:36.097+0000] {standard_task_runner.py:57} INFO - Started process 2572 to run task
[2023-11-08T14:52:36.103+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'sql_hook_to_s3', 'load_data_from_pg_to_s3', 'manual__2023-11-08T14:52:35.114580+00:00', '--job-id', '203', '--raw', '--subdir', 'DAGS_FOLDER/sql_hook_to_s3_dag.py', '--cfg-path', '/tmp/tmpxt8hwiyf']
[2023-11-08T14:52:36.109+0000] {standard_task_runner.py:85} INFO - Job 203: Subtask load_data_from_pg_to_s3
[2023-11-08T14:52:36.253+0000] {task_command.py:416} INFO - Running <TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 manual__2023-11-08T14:52:35.114580+00:00 [running]> on host 5cb9101badf1
[2023-11-08T14:52:36.451+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='safarnejad.ho@gmail.com' AIRFLOW_CTX_DAG_OWNER='safarnejad' AIRFLOW_CTX_DAG_ID='sql_hook_to_s3' AIRFLOW_CTX_TASK_ID='load_data_from_pg_to_s3' AIRFLOW_CTX_EXECUTION_DATE='2023-11-08T14:52:35.114580+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-08T14:52:35.114580+00:00'
[2023-11-08T14:52:36.468+0000] {logging_mixin.py:154} WARNING - /home/***/.local/lib/python3.8/site-packages/***/utils/context.py:206 AirflowContextDeprecationWarning: Accessing 'next_ds_nodash' from the template is deprecated and will be removed in a future version. Please use '{{ data_interval_end | ds_nodash }}' instead.
[2023-11-08T14:52:36.500+0000] {base.py:73} INFO - Using connection ID 'orders-pg-conn' for task execution.
[2023-11-08T14:52:36.518+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/sql_hook_to_s3_dag.py", line 28, in load_data_to_file
    cursor.execute(
psycopg2.errors.SyntaxError: syntax error at or near "<"
LINE 1: ... * FROM public.order WHERE date >= '20231108' AND < '2023110...
                                                             ^

[2023-11-08T14:52:36.534+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=sql_hook_to_s3, task_id=load_data_from_pg_to_s3, execution_date=20231108T145235, start_date=20231108T145236, end_date=20231108T145236
[2023-11-08T14:52:36.553+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 203 for task load_data_from_pg_to_s3 (syntax error at or near "<"
LINE 1: ... * FROM public.order WHERE date >= '20231108' AND < '2023110...
                                                             ^
; 2572)
[2023-11-08T14:52:36.578+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-08T14:52:36.613+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
